# document-portal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  incline_policies.json  pyproject.toml  test.py
.github/workflows/: aws.yaml  ci.yaml  task_definition.json
backup_service/: .backup_manifest.json  .env.example  Dockerfile  README.md  backup_config.yaml  pyproject.toml
backup_service/backup_service/: __init__.py  backup_core.py  cli.py  env.py  logging.py
configs/: config.yaml
llm_observability/: docker-compose.yaml  langfuse_sample_code.py
llm_observability/src/: tracing.py
notebooks/: advance_features.ipynb  experiments.ipynb  lagchain_inmem_cache.ipynb  logging_experiment.ipynb  redis_semantic_cache.ipynb
src/ai/document_analyzer/: analysis.py  data_analysis.py  data_ingestion.py
src/ai/document_chat/: retrieval.py
src/ai/document_compare/: document_comparator.py
src/ai/document_ingestion/: data_ingestion.py
src/ai/parsing/: output_parsing.py
src/ai/prompt/: prompt_library.py
src/api/: main.py
src/api/routers/: analyze.py  chat.py  compare.py  metrics.py
src/client/templates/: index.html
src/observability/: langfuse_tracing.py
src/schemas/ai/: models.py
src/schemas/api/: input.py  ouput.py
src/services/: tracing.py
src/utils/: config_loader.py  document_ops.py  env_bootstrap.py  file_io.py  model_loader.py  semantic_cache.py  token_counter.py
src/utils/exception/: custom_exception.py
src/utils/logger/: __init__.py  custom_logging.py
tests/: test_unit_cases.py
