[project]
name = "document-portal-backup"
version = "0.1.0"
description = "Standalone backup service for Document Portal (EFS -> S3 incremental uploads)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34.0",
  "PyYAML>=6.0.2",
  "python-dotenv>=1.0.1",
]

[project.scripts]
backup-service = "backup_service.cli:main"

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backup_service*"]
